# libriichi

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  Riichi.hpp  demo.cpp  hand_tests.cpp  libriichi.cpp  tests.cpp
riichi/: AI.cpp  AI.hpp  AIAgents_Standard.cpp  AIAgents_Standard.hpp  Base.hpp  Containers.hpp  DebugUtils.hpp  Declare.hpp  Declare_Standard.hpp  EnumUtils.hpp  Hand.cpp  Hand.hpp  Hand.inl  HandInterpreter.cpp  HandInterpreter.hpp  HandInterpreter_Standard.cpp  HandInterpreter_Standard.hpp  IDs.hpp  NamedUnion.hpp  Player.hpp  PlayerCount.hpp  Random.hpp  RangeUtils.hpp  Round.cpp  Round.hpp  RoundData.cpp  RoundData.hpp  Rules.cpp  Rules.hpp  Rules.inl  Rules_Standard.cpp  Rules_Standard.hpp  Rules_Standard.inl  Seat.hpp  Table.cpp  Table.hpp  Table.inl  TableEvent.hpp  TableState.cpp  TableState.hpp  (+24 more)
